Change design approach

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,75 +1,89 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <!-- Mocker CSS -->
-    <link rel="stylesheet" href="/css/mocker.css"/>
+    <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+	<link type="text/css" rel="stylesheet" href="css/mocker.css"/>
+    
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 	<title>Mocker</title>
 </head>
 <body class="mkrBgr">
-	<div class="container">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">Mocker</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div id="navbarSupportedContent" class="collapse navbar-collapse">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="/">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/about">About</a>
-					</li>
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input class="form-control mr-sm-2" type="search" placeholder="Search endpoint" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form>
+	<header>
+		<nav class="orange lighten">
+			<div class="container">
+				<div class="row">
+					<div class="col l12 s12">
+						<div class="nav-wrapper">
+							<a href="/" class="brand-logo">Mocker</a>
+							<ul id="nav-mobile" class="right hide-on-med-and-down">
+								<li><a href="/">Home</a></li>
+								<li><a href="/about">About</a></li>
+								<li><a href="/contact">Contact</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</nav>
-	</div>
+	</header>
 
-	<div class="container">
-		<form>
-			<div class="form-group">
-				<label for="endpoint">Endpoint</label>
-				<input id="endpoint" type="text" class="form-control" placeholder="Enter endpoint">
+	<main>
+		<div class="container">
+			<div class="row">
+				<form class="col s12">
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="name" type="text" class="validate">
+							<label for="name">Name</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="description" type="text" class="validate">
+							<label for="description">Description</label>
+						</div>
+					</div>
+					<div class="row">
+						<div class="input-field col s12">
+							<input id="endpoint" type="text" class="validate">
+							<label for="endpoint">Endpoint</label>
+						</div>
+					</div>
+				</form>
 			</div>
-			<div class="form-group">
-				<label for="method">Method</label>
-				<select id="method" class="custom-select">
-					<option value="get">GET</option>
-					<option value="post">POST</option>
-					<option value="put">PUT</option>
-					<option value="delete">DELETE</option>
-				</select>
-			</div>
-			<div class="form-group">
-				<label for="name">Name</label>
-				<input id="name" type="text" class="form-control" placeholder="Enter name">
-			</div>
-			<div class="form-group">
-				<label for="description">Description</label>
-				<input id="description" type="text" class="form-control" placeholder="Enter description">
-			</div>
-			<button type="submit" class="btn btn-primary">Create</button>
-		</form>
-	</div>
+		</div>
+	</main>
 
-	<!-- Mocker JavaScript -->
-    <script src="/js/mocker.js"></script>
-    
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<footer class="page-footer teal">
+		<div class="container">
+			<div class="row">
+				<div class="col l6 s12 left">
+					<h5 class="white-text">Mocker</h5>
+					<p class="grey-text text-lighten-4">
+						The Mocker web application behaves like a mock server that allows the user to create<br/>
+						mock endpoints and define possible responses for the configured requests.
+					</p>
+				</div>
+				<div class="col l2 s12 right">
+					<h5 class="white-text">Pages</h5>
+					<ul>
+						<li><a class="grey-text text-lighten-3" href="/">Home</a></li>
+						<li><a class="grey-text text-lighten-3" href="about">About</a></li>
+						<li><a class="grey-text text-lighten-3" href="/contact">Contact</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container">Copyright &copy; 2019 Mocker. All rights reserved.</div>
+		</div>
+	</footer>
 </body>
 </html>
