Add form validation

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -40,7 +40,7 @@
 
 	<main>
 		<div class="container">
-			<form class="card-panel">
+			<form id="createMappingForm" action="/v1/api/mappings" method="post" class="card-panel">
 				<div class="row">
 					<div class="col s12 m6">
 						<h5>Mapping</h5>
@@ -50,11 +50,12 @@
 					</div>
 					<div class="col s12 m6">
 						<div class="input-field">
-							<input id="name" type="text" class="validate tooltipped" data-position="bottom" data-tooltip="Enter a unique name">
+							<input id="name" type="text" class="validate" placeholder="Enter an unique name" required="required">
 							<label for="name">Name *</label>
+							<span class="helper-text" data-error="Name is required"></span>
 						</div>
 						<div class="input-field">
-							<textarea id="description" class="materialize-textarea"></textarea>
+							<input id="description" type="text">
 							<label for="description">Description</label>
 						</div>
 					</div>
@@ -66,18 +67,18 @@
 					</div>
 					<div class="col s12 m6">
 						<div class="input-field">
-							<input id="endpoint" type="text" class="validate tooltipped" data-position="bottom" data-tooltip="Enter value that starts after https://localhost:8080/...">
+							<input id="endpoint" type="text" class="validate" placeholder="Value starts after https://localhost:8080/..." required="required">
 							<label for="endpoint">Endpoint *</label>
+							<span class="helper-text" data-error="Endpoint is required"></span>
 						</div>
 						<div class="input-field">
-							<select>
-								<option value="" disabled selected></option>
+							<select id="method" class="validate" required="required">
 								<option value="get">GET</option>
 								<option value="post">POST</option>
 								<option value="put">PUT</option>
 								<option value="delete">DELETE</option>
 							</select>
-							<label>Method *</label>
+							<label for="method">Method *</label>
 						</div>
 					</div>
 				</div>
@@ -92,12 +93,14 @@
 					</div>
 					<div class="col s12 m6">
 						<div class="input-field">
-							<input id="status" type="text" class="validate tooltipped" data-position="bottom" data-tooltip="Enter the HTTP status. Example: 200, 404 etc.">
+							<input id="status" type="number" class="validate" placeholder="Example HTTP status: 200, 404 etc." required="required">
 							<label for="status">Status *</label>
+							<span class="helper-text" data-error="Status is required"></span>
 						</div>
 						<div class="input-field">
-							<textarea id="body" class="materialize-textarea tooltipped" data-position="bottom" data-tooltip="Enter the HTTP response body. Can be JSON, XML etc."></textarea>
+							<textarea id="body" class="materialize-textarea validate" placeholder="Enter the HTTP response body. Can be JSON, XML etc." required="required"></textarea>
 							<label for="body">Body *</label>
+							<span class="helper-text" data-error="Body is required"></span>
 						</div>
 						<button id="createMapping" class="btn waves-effect waves-light" type="submit">Create</button>
 					</div>
