--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -137,7 +137,7 @@
 				<p id="modalContent"></p>
 			</div>
 			<div class="modal-footer">
-				<a href="#!" class="modal-close waves-effect waves-green btn">Close</a>
+				<a href="javascript:;" class="modal-close waves-effect waves-green btn">Close</a>
 			</div>
 		</div>
 	</main>
