Change placeholder message

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -67,7 +67,7 @@
 					</div>
 					<div class="col s12 m6">
 						<div class="input-field">
-							<input id="endpoint" type="text" class="validate" placeholder="Value starts after https://localhost:8080/..." required="required">
+							<input id="endpoint" type="text" class="validate" placeholder="Value starts after https://localhost:8080/v1/api/mocks/..." required="required">
 							<label for="endpoint">Endpoint *</label>
 							<span class="helper-text" data-error="Endpoint is required."></span>
 						</div>
